 <resources>
    <string name="app_name">Marvel Tracker</string>

    <string name="tv_titulo_catalogo">Catálogo de Marvel</string>

    <string name="tv_bienvenida_usuario">Bienvenido, %1$s</string>

    <string name="btn_detalles">Ver ficha técnica</string>
    <string name="btn_marcar_visto">Marcar como visto</string>

    <string name="tv_estado_pendiente">Pendiente de ver</string>
    <string name="tv_estado_completado">Completada</string>

    <string-array name="array_fases_marvel">
        <item>Fase 1</item>
        <item>Fase 2</item>
        <item>Fase 3</item>
        <item>Fase 4</item>
        <item>Fase 5</item>
        <item>Fase 6</item>
    </string-array>

    <string name="titulo_avengers">Los Vengadores</string>
    <string name="titulo_ultron">Vengadores: La era de Ultrón</string>
    <string name="titulo_infinity">Vengadores: Infinity War</string>
    <string name="titulo_endgame">Vengadores: Endgame</string>

    <string name="info_avengers">2012 • 2h 23m • Acción / Ciencia ficción</string>

     <string name="titulo_sinopsis">Sinopsis</string>
     <string name="sinopsis_avengers">Cuando un enemigo inesperado surge como una gran amenaza para la seguridad mundial, Nick Fury, director de la Agencia SHIELD, decide reclutar a un equipo para salvar al mundo del desastre: Iron Man, Capitán América, Hulk, Thor, Viuda Negra y Ojo de Halcón.</string>
     <string name="btn_volver">Volver al catálogo</string>
</resources>